CS496 Project3 Finished

--- a/Client/app/src/main/res/layout/app_bar_main.xml
+++ b/Client/app/src/main/res/layout/app_bar_main.xml
@@ -29,7 +29,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
-            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"/>
+            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
+            app:tabTextColor="#918AB0"
+            app:tabSelectedTextColor="@color/colorAccent" />
 
     </android.support.design.widget.AppBarLayout>
 
