--- a/Client/app/src/main/res/layout/chat_item_chatmessage.xml
+++ b/Client/app/src/main/res/layout/chat_item_chatmessage.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -9,19 +8,20 @@
     <TextView
         android:id="@+id/username"
         style="?android:textAppearanceMedium"
-        android:textColor="?android:textColorPrimary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:singleLine="true"
-        android:textStyle="bold"/>
+        android:textColor="?android:textColorPrimary"
+        android:textStyle="bold" />
+
     <TextView
         android:id="@+id/message"
         style="?android:textAppearanceMedium"
-        android:textColor="?android:textColorPrimary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/spacing"
         android:paddingRight="@dimen/spacing"
-        android:singleLine="true"/>
+        android:singleLine="true"
+        android:textColor="?android:textColorPrimary" />
 
 </LinearLayout>
