--- a/Client/app/src/main/res/layout/chat_item_log.xml
+++ b/Client/app/src/main/res/layout/chat_item_log.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -9,9 +8,9 @@
     <TextView
         android:id="@+id/message"
         style="?android:textAppearanceSmall"
-        android:textColor="?android:textColorSecondary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:textColor="?android:textColorSecondary" />
 
 </LinearLayout>
