--- a/Client/app/src/main/res/layout/login_layout.xml
+++ b/Client/app/src/main/res/layout/login_layout.xml
@@ -73,10 +73,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="3dp"
-            android:paddingRight="3dp"
+            android:layout_marginBottom="7dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="7dp">
+            android:paddingLeft="3dp"
+            android:paddingRight="3dp">
 
             <Button
                 android:id="@+id/login"
@@ -91,9 +91,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="3dp"
             android:paddingLeft="3dp"
-            android:paddingRight="3dp"
-            android:layout_marginBottom="3dp">
+            android:paddingRight="3dp">
 
             <Button
                 android:id="@+id/sign"
