--- a/Client/app/src/main/res/layout/nav_header_main.xml
+++ b/Client/app/src/main/res/layout/nav_header_main.xml
@@ -23,8 +23,8 @@
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
             android:text="Android Studio"
-            android:textSize="27sp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textSize="27sp" />
 
         <TextView
             android:layout_width="wrap_content"
