--- a/Client/app/src/main/res/layout/tab0_message_layout.xml
+++ b/Client/app/src/main/res/layout/tab0_message_layout.xml
@@ -3,7 +3,9 @@
     android:id="@+id/real_whole_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,8 +13,9 @@
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="255dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <HorizontalScrollView
@@ -65,17 +68,17 @@
         <ImageButton
             android:id="@+id/accept"
             android:layout_width="24dp"
-            android:layout_marginLeft="10dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
             android:background="@drawable/ic_thumb_up_black_24dp" />
 
         <ImageButton
             android:id="@+id/reject"
             android:layout_width="24dp"
-            android:layout_marginLeft="10dp"
-            android:layout_gravity="center"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
             android:background="@drawable/ic_thumb_down_black_24dp" />
 
 
@@ -98,7 +101,7 @@
                 android:layout_width="70dp"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
-                android:text="학과:" />
+                android:text="학과 :  " />
 
             <TextView
                 android:id="@+id/userDepartment"
@@ -123,7 +126,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:paddingRight="5dp"
-                android:text="동아리:" />
+                android:text="동아리/취미 :  " />
 
             <TextView
                 android:id="@+id/userCircle"
@@ -145,7 +148,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:paddingRight="5dp"
-                android:text="취미:" />
+                android:text="기타 :  " />
 
             <TextView
                 android:id="@+id/userHobby"
@@ -162,7 +165,6 @@
             android:layout_height="wrap_content" />
 
     </LinearLayout>
-
 
 
 </LinearLayout>
