--- a/Client/app/src/main/res/layout/tab0_message_no_layout.xml
+++ b/Client/app/src/main/res/layout/tab0_message_no_layout.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="60dp">
+    android:layout_height="60dp"
+    android:orientation="horizontal"
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp">
 
     <LinearLayout
-        android:layout_width="320dp"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         android:orientation="vertical">
 
         <HorizontalScrollView
@@ -53,6 +56,6 @@
         android:layout_width="30dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:src="@drawable/ic_thumb_down_black_24dp"/>
+        android:src="@drawable/ic_thumb_down_black_24dp" />
 
 </LinearLayout>
