--- a/Client/app/src/main/res/layout/tab0_message_reject_layout.xml
+++ b/Client/app/src/main/res/layout/tab0_message_reject_layout.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="60dp">
+    android:layout_height="60dp"
+    android:orientation="horizontal"
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp">
 
     <LinearLayout
-        android:layout_width="320dp"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         android:orientation="vertical">
 
 
@@ -52,7 +55,7 @@
     <ImageView
         android:layout_width="30dp"
         android:layout_height="match_parent"
-        android:src="@drawable/ic_sentiment_dissatisfied_black_24dp"/>
+        android:src="@drawable/ic_sentiment_dissatisfied_black_24dp" />
 
 
 </LinearLayout>
