--- a/Client/app/src/main/res/layout/tab0_message_send_layout.xml
+++ b/Client/app/src/main/res/layout/tab0_message_send_layout.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="60dp">
+    android:layout_height="60dp"
+    android:orientation="vertical"
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp">
 
     <HorizontalScrollView
         android:layout_width="match_parent"
