--- a/Client/app/src/main/res/layout/tab3_message.xml
+++ b/Client/app/src/main/res/layout/tab3_message.xml
@@ -13,8 +13,7 @@
         <ListView
             android:id="@+id/messageListView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </ListView>
+            android:layout_height="match_parent" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
