--- a/Client/app/src/main/res/menu/menu_main.xml
+++ b/Client/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
-    <item android:id="@+id/action_leave"
-        android:title="@string/action_leave"
+    <item
+        android:id="@+id/action_leave"
         android:orderInCategory="100"
-        app:showAsAction="never"/>
+        android:title="@string/action_leave"
+        app:showAsAction="never" />
 </menu>
